handle duplicate key names and blank lines

--- a/testPart.cfg
+++ b/testPart.cfg
@@ -1,13 +1,13 @@
 // Near Future Aeronautics 1.0.0
-// Engine - Turbofan 2.5m
+// Engine - Turbojet 2.5m
 PART
 {
-	name = nfa-turbofan-25-1
+	name = nfa-turbojet-25-1
 	module = Part
 	author = Chris Adderley (Nertea)
 	MODEL
 	{
-		model = NearFutureAeronautics/Parts/Engine/JetEngines/nfa-turbofan-25-1
+		model = NearFutureAeronautics/Parts/Engine/JetEngines/nfa-turbojet-25-1
 		position = 0.0, 0.0, 0.0
 		scale = 1,1,1
 		rotation = 0, 0, 0
@@ -15,35 +15,99 @@ PART
   MODEL
 	{
 		model = NearFutureAeronautics/Parts/Engine/Multimode/nfa-engine-endcap-25-1
-		position = 0.0, 0.45520712, 0.0
+		position = 0.0, 1.472535, 0.0
 		scale = 1,1,1
 		rotation = 0, 0, 0
 	}
-	scale = 1.0
-	rescaleFactor = 1
-	node_stack_top = 0.0, 0.4552071, 0.0, 0.0, 1.0, 0.0,2
-	CoMOffset = 0.0,3.5, 0.0
-	TechRequired = highAltitudeFlight
-	entryCost = 23500
-	cost = 4750
+
+	TechRequired = hypersonicFlight
+	entryCost = 56250
+	cost = 11250
 	category = Engine
 	subcategory = 0
-	title = #LOC_NearFutureAero_turbofan-25-1_title
-	manufacturer = #LOC_NearFutureAero_manufacturer_KVRoe
-	description = #LOC_NearFutureAero_turbofan-25-1_description
-	attachRules = 1,0,1,0,0
-	mass = 5.775
+	title = #LOC_NearFutureAero_turbojet-25-1_title
 
+	mass = 6.75
 	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 2
-	crashTolerance = 16
-	maxTemp = 2000 // = 3600
+	
 	bulkheadProfiles = size2
 
-	tags =  #LOC_NearFutureAero_turbofan-25-1_tags	
+	tags = #LOC_NearFutureAero_turbojet-25-1_tags
+
+	MODULE
+	{
+		name = ModuleEnginesFX
+
+		maxThrust = 540
+		heatProduction = 95
+		useEngineResponseTime = True
+		engineAccelerationSpeed = 0.2
+		engineDecelerationSpeed = 0.4
+		useVelocityCurve = False
+
+		engineSpoolIdle = 0.05
+		engineSpoolTime = 2.0
+		EngineType = Turbine
+
+		PROPELLANT
+		{
+			name = LiquidFuel
+			resourceFlowMode = STAGE_STACK_FLOW_BALANCE
+			ratio = 1
+			DrawGauge = True
+		}
+		PROPELLANT
+		{
+			name = IntakeAir
+			ignoreForIsp = True
+			ratio = 7
+		}
+		atmosphereCurve
+		{
+			key = 0 4300 0 0
+		}
+		// Jet params
+		atmChangeFlow = True
+		useVelCurve = True
+		useAtmCurve = True
+		machLimit = 2.8
+		machHeatMult = 6.0
+		velCurve
+		{
+			key = 0 1 0 0
+			key = 0.2 0.98 0 0
+			key = 0.72 1.716 2.433527 2.433527
+			key = 1.36 3.2 1.986082 1.986082
+			key = 2.15 4.9 1.452677 1.452677
+			key = 3 5.8 0.0005786046 0.0005786046
+			key = 4.5 3 -4.279616 -4.279616
+			key = 5.5 0 -0.02420209 0
+		}
+		atmCurve
+		{
+			// definite 'kink' to the curve at high altitude, compared to flatter BJE curve
+			key = 0 0 0 0
+			key = 0.045 0.166 4.304647 4.304647
+			key = 0.16 0.5 0.5779132 0.5779132
+			key = 0.5 0.6 0.4809403 0.4809403
+			key = 1 1 1.013946 0
+		}
+	}
+
+	
+	MODULE
+	{
+		name = ModuleGimbal
+		gimbalTransformName = GimbalBone
+		gimbalRange = 1
+	}
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 0
+		maxAmount = 0
+		isTweakable = false
+		hideFlow = true
+	}
+	
 }
